--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,25 @@
 ---
-title: "CEW+ Data Archive Alliance"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "CEW+ Data Archive Alliance Research"
+excerpt: "Providing a thorough solution for data analysis, click the title to check more information with the project <br/><img src='/images/cew.png'>"
 collection: portfolio
 ---
-
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+<p>
+    Co-researchers: Latitude Brown, Kapotaksha Das, Gary Huang, Yumiao Hui<br />
+    <b>Note: Due to the concern of information confidentiality and privacy issues, I do not provide the links to deliverables here until specific requested.</b><br />
+    Below is the overview of our research:<br />
+</p>
+<p>
+<img src= '/images/CEW+ Archival - Cohort Showcase Poster.png'>
+<p>
+<p>
+    We provide reports for fixing issues in survey question design, missing data, demographic information visualizations and video instructions for our designed data cleaning tools with UI interface. Throughout our research, we have weekly stand-up meetings and based on project management. Here are some highlights from our research:
+    <ol>
+      <li><b>The Backend Design</b> </li>
+      <img src= '/images/pr.png'>
+      <li><b>The UI Interface</b></li>
+      <img src= '/images/ui1.png'>
+      <img src= '/images/ui2.png'>
+      <li><b>Word Cloud Visualizations</b></li>
+      <img src= '/images/w1.png'>
+    </ol>
+</p>
