--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "CEW+ Data Archive Alliance Research"
-excerpt: "Providing a thorough solution for data analysis, click the title to check more information with the project <br/><img src='/images/cew.png'>"
+excerpt: "Providing a thorough solution from data cleaning to data analysis, click the title to check more information with the project <br/><img src='/images/cew.png'>"
 collection: portfolio
 ---
 <p>
