--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -12,6 +12,8 @@ collection: portfolio
     <ul>
       <li>Power Law for User-Movie Bipartite Graph? NO!</li>
       <img src='/images/pw.png'>
+      <li>User-Movie Bipartite Graph Visualization, We can see 85% of ratings give 3+ scores</li>
+      <img src='/images/p3.png'>
     </ul>
   </li>
   <li><b>Further Network Analysis</b></li>
